# ldparser

./: .gitignore  Cargo.toml  README.md
examples/: traverse.rs
parser/: Cargo.toml
parser/src/: commands.rs  expressions.rs  idents.rs  main.rs  memory.rs  numbers.rs  script.rs  sections.rs  statements.rs  utils.rs  whitespace.rs
src/: commands.rs  eval.rs  expressions.rs  idents.rs  lib.rs  macros.rs  main.rs  memory.rs  numbers.rs  script.rs  sections.rs  statements.rs  symbols.rs  tests.rs  utils.rs  whitespace.rs
tests/: armelf.x  bootloader.ld  insert_after.ld
