[package]
name = "ldscript-parser"
authors = ["Vadzim Dambrouski <vadzim.dambrouski@promwad.com>"]
description = "A Linker Script file parser"
documentation = "https://docs.rs/ldscript-parser"
keywords = ["ldscript", "lds", "parser"]
license = "MIT"
repository = "https://github.com/pftbest/ldparser"
version = "0.2.0"
exclude = [
    "tests/*"
]

[dependencies]
nom = "7.1.3"
