[package]
name = "ldscript-parser"
authors = ["Vadzim Dambrouski <vadzim.dambrouski@promwad.com>"]
description = "A Linker Script file parser"
documentation = "https://docs.rs/ldscript-parser"
keywords = ["Linker Script", "ldscript", "ld", "parser"]
license = "MIT"
repository = "https://github.com/pftbest/ldparser"
version = "0.1.0"

[dependencies]
nom = "2.2"
